# smart-fridge

./: README.md  requirements.txt
.claude/: settings.json  settings.local.json
board/fridge_ai/: CMakeLists.txt  build.sh  config.h  database.c  database.h  event.c  event.h  gpio.c  gpio.h  main.c  sync.c  sync.h
board/fridge_manager/: config.py  database.py  display_ui.py  event_detector.py  gpio_ctrl.py  main.py  server_sync.py
board/smartfridge/: build_mgr.sh  fridge_mgr.c
config/: board.json.bak  server.json
deploy/: event_stabilizer.py  fridge_ai  fridge_mgr.py  lcd_ui.py  partial_qty.py  partial_qty.py.indentfix.bak  start.sh  stop.sh  test_door.sh
docs/: AI二次开发文档.md  progress.md  小白开发技术文档.md  小米赛题五_后续开发计划.md
docs/superpowers/plans/: 2026-05-31-partial-takeout.md
server/: app.py  app.py.capture-snapshots.bak  app.py.sync-replace.bak  fridge_assistant.py  server_fridge.db
server/rag/: healthy_diet_knowledge.md
server/static/: style.css
server/templates/: index.html  index.html.capture-snapshots.bak
test/: test_config.py  test_event_enhanced.py  test_fridge_assistant.py  test_partial_remove.py  test_partial_takeout.py  test_regression.py  test_stabilizer.py
